--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "jshint": "~2.x",
     "tiny-cdn": "^0.7.0",
     "tressa": "^0.3.1",
-    "uglify-js": "1.x"
+    "uglify-js": "^2.8.29"
   }
 }
