--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "git://github.com/WebReflection/broadcast.git"
   },
   "main": "build/broadcast.node.js",
-  "browser": "min.js",
+  "unpkg": "min.js",
   "scripts": {
     "test": "NATIVE=1 node test/test.js && sleep 2 && istanbul cover test/test.js",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
