--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   "module": "esm/index.js",
   "unpkg": "min.js",
   "scripts": {
-    "build": "npm run esm && npm run cjs && npm run test && npm run min",
+    "build": "npm run esm && npm run cjs && npm run test && npm run min && npm run size",
     "cjs": "cp index.js cjs/index.js && echo 'module.exports = broadcast();' >> cjs/index.js",
     "esm": "cp index.js esm/index.js && echo 'export default broadcast();' >> esm/index.js",
     "min": "uglifyjs index.js --support-ie8 --comments=/^!/ -c -m -o min.js",
+    "size": "cat index.js | wc -c;cat min.js | wc -c;gzip -c9 min.js | wc -c;cat min.js | brotli | wc -c && rm -f min.js.br",
     "test": "istanbul cover test/test.js",
     "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
