Updated the whole library

--- a/.npmignore
+++ b/.npmignore
@@ -1,12 +1,8 @@
 .DS_Store
-.gitignore
+.nyc_output
+.eslintrc.json
 .travis.yml
-coverage
-src
-template
-test
-utils
-node_modules
-Makefile
-API.md
-package-lock.json
+coverage/
+node_modules/
+rollup/
+test/
