--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
-  "version": "3.0.0",
-  "license": "ISC",
   "name": "broadcast",
-  "description": "",
-  "homepage": "https://github.com/WebReflection/broadcast",
+  "version": "3.0.0",
+  "description": "A promises based notification channel",
+  "main": "./cjs/index.js",
+  "scripts": {
+    "build": "npm run cjs && npm run rollup:es && npm run rollup:index && npm run fix:default && npm run test",
+    "cjs": "ascjs --no-default esm cjs",
+    "rollup:es": "rollup --config rollup/es.config.js && sed -i.bck 's/^var /self./' es.js && rm -rf es.js.bck",
+    "rollup:index": "rollup --config rollup/index.config.js",
+    "fix:default": "sed -i 's/({})/({}).default/' index.js && sed -i 's/({})/({}).default/' es.js",
+    "coveralls": "c8 report --reporter=text-lcov | coveralls",
+    "test": "c8 node test/index.js"
+  },
   "keywords": [
     "broadcast",
     "notification",
@@ -11,31 +19,24 @@
     "global",
     "channel"
   ],
-  "author": {
-    "name": "Andrea Giammarchi",
-    "web": "http://webreflection.blogspot.com/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/WebReflection/broadcast.git"
-  },
-  "main": "cjs/index.js",
-  "module": "esm/index.js",
-  "unpkg": "min.js",
-  "scripts": {
-    "build": "npm run esm && npm run cjs && npm run test && npm run min && npm run size",
-    "cjs": "cp index.js cjs/index.js && echo 'module.exports = broadcast();' >> cjs/index.js",
-    "esm": "cp index.js esm/index.js && echo 'export default broadcast();' >> esm/index.js",
-    "min": "uglifyjs index.js --support-ie8 --comments=/^!/ -c -m -o min.js",
-    "size": "cat index.js | wc -c;cat min.js | wc -c;gzip -c9 min.js | wc -c;cat min.js | brotli | wc -c && rm -f min.js.br",
-    "test": "istanbul cover test/test.js",
-    "coveralls": "cat ./coverage/lcov.info | coveralls"
-  },
+  "author": "Andrea Giammarchi",
+  "license": "ISC",
   "devDependencies": {
-    "coveralls": "^3.0.2",
-    "istanbul": "^0.4.5",
-    "jshint": "^2.9.6",
-    "tressa": "^0.3.1",
-    "uglify-js": "^2.8.29"
-  }
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "ascjs": "^5.0.1",
+    "c8": "^7.10.0",
+    "coveralls": "^3.1.1",
+    "rollup": "^2.60.1",
+    "rollup-plugin-terser": "^7.0.2"
+  },
+  "module": "./esm/index.js",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./esm/index.js",
+      "default": "./cjs/index.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "unpkg": "es.js"
 }
