--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "rollup:es": "rollup --config rollup/es.config.js && sed -i.bck 's/^var /self./' es.js && rm -rf es.js.bck",
     "rollup:index": "rollup --config rollup/index.config.js",
     "fix:default": "sed -i 's/({})/({}).default/' index.js && sed -i 's/({})/({}).default/' es.js",
-    "coveralls": "c8 report --reporter=text-lcov | coveralls",
-    "test": "c8 node test/index.js"
+    "test": "c8 node test/index.js",
+    "coverage": "mkdir -p ./coverage; c8 report --reporter=text-lcov > ./coverage/lcov.info"
   },
   "keywords": [
     "broadcast",
@@ -25,7 +25,6 @@
     "@rollup/plugin-node-resolve": "^13.0.6",
     "ascjs": "^5.0.1",
     "c8": "^7.10.0",
-    "coveralls": "^3.1.1",
     "rollup": "^2.60.1",
     "rollup-plugin-terser": "^7.0.2"
   },
